[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
redb = "2.0.0"
serde = { version = "1.0.197", features = ["derive"] }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3
